# FlatTableAnalysis

./: FlatTableAnalysis.py  LICENSE  README.md  pyproject.toml  tests.ipynb
.github/workflows/: publish.yaml  release.yaml
FlatTableAnalysis/: flat_table_analysis.py
flattableanalysis/: __init__.py  flat_table_analysis.py  utils.py
