[tool.poetry]
name = "flattableanalysis"
version = "0.0.0"
description = "Architectural analysis of a flat table. Discovering data from technical point of view."
authors = ["Grigory T"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pandas = "*"
more-itertools = "*"
networkx = "*"
graphviz = "*"
python-igraph = "*"
tqdm = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
